# code_cpp_test

./: .gitmodules
src/: .gitattributes  CMakeLists.txt  update.bat  vcpkg.json  vcpkg_install.bat
src/Base16API/include/: base16.h
src/Base16API/src/: base16.cpp  main.cpp
src/Base16test/src/: main.cpp
src/Card21Game/: CMakeLists.txt
src/Card21Game/src/: main.cpp
src/CinTest/: CMakeLists.txt
src/CinTest/src/: main.cpp
src/ClassAllocator/src/: main.cpp
src/ClassComplex/src/: main.cpp
src/ClassTemplate/src/: main.cpp
src/ClassVector/src/: main.cpp
src/CoutTest/src/: main.cpp
src/DataPtr/src/: main.cpp
src/EnumTest/src/: main.cpp
src/FileLogTest/src/: main.cpp
src/FileStreamInTest/src/: main.cpp
src/FileStreamOutTest/: CMakeLists.txt
src/FileStreamOutTest/src/: main.cpp
src/FunctionTemplate/src/: main.cpp
src/GuessWord/: CMakeLists.txt
src/GuessWord/src/: main.cpp
src/LogTest/src/: main.cpp
src/LogicalOpt/src/: main.cpp
src/MemoryLeakDetector/: CMakeLists.txt
src/MemoryLeakDetector/include/: MemoryLeakDetector.h
src/MemoryLeakDetector/src/: MemoryLeakDetector.cpp  main.cpp
src/MoveTest/src/: main.cpp
src/MsgServer/src/: main.cpp
src/ProgrammingParadigmTest/src/: main.cpp
src/RCharTest/src/: main.cpp
src/StringStreamTest/src/: main.cpp
src/StringTest/src/: main.cpp
src/TicTacToe/: CMakeLists.txt
src/TicTacToe/src/: main.cpp
src/Timer/: CMakeLists.txt
src/Timer/src/: main.cpp
src/UsingFunction/src/: main.cpp
src/XExecTest/: CMakeLists.txt
src/XExecTest/src/: main.cpp
src/XUserInput/src/: main.cpp
src/XVideoEdit/: CMakeLists.txt
src/XVideoEdit/include/: AVProgressBar.h  AVTask.h  AnalyzeCommandBuilder.h  CVProgressBar.h  CVTask.h  CommandParser.h  CommandProcessor.h  CompletionManager.h  ConvertCommandBuilder.h  CutCommandBuilder.h  CutProgressBar.h  DecryptCommandBuilder.h  DecryptProgressBar.h  EncryptCommandBuilder.h  EncryptProgressBar.h  FFTask.h  HistoryManager.h  ISingleton.hpp  ITask.h  InputStateMachine.h  Parameter.h  ParameterValue.h  ProgressBarConfig.h  ProgressBarConfigManager.h  ReplxxConfigurator.h  TaskFacory.h  TaskManager.h  TaskProgressBar.h  UIConfig.h  VideoFileValidator.h  XConst.h  XExec.h  XFile.h  XTask.h  XTool.h  XUserInput.h
src/XVideoEdit/src/: AVProgressBar.cpp  AVTask.cpp  AnalyzeCommandBuilder.cpp  CVProgressBar.cpp  CVTask.cpp  CommandParser.cpp  CommandProcessor.cpp  CompletionManager.cpp  ConvertCommandBuilder.cpp  CutCommandBuilder.cpp  CutProgressBar.cpp  DecryptCommandBuilder.cpp  DecryptProgressBar.cpp  EncryptCommandBuilder.cpp  EncryptProgressBar.cpp  FFTask.cpp  HistoryManager.cpp  InputStateMachine.cpp  Parameter.cpp  ParameterValue.cpp  ProgressBarConfig.cpp  ProgressBarConfigManager.cpp  ReplxxConfigurator.cpp  TaskFacory.cpp  TaskManager.cpp  TaskProgressBar.cpp  VideoFileValidator.cpp  XExec.cpp  XFile.cpp  XTask.cpp  XTool.cpp  XUserInput.cpp  main.cpp
src/cmake/: CommonTools.cmake
